--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "npm": "5.0.3"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cookie-session": "^2.0.0-beta.2",
-    "express": "^4.15.3",
+    "express": "^4.15.3"
   }
 }
