--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "cookie-session": "^2.0.0-beta.2",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0"
   }
 }
