--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "cookie-session": "^2.0.0-beta.2",
     "express": "^4.15.3",
+    "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
-    "passport-google-oauth": "^1.0.0"
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
